<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account_log_in">Already have account? Log in</string>
    <string name="home">Home</string>
    <string name="todo">ToDo</string>
    <string name="add">Add</string>
    <string name="calendar">Calendar</string>
    <string name="reminder">Reminder</string>
</resources>