<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/menu_todo"
        android:icon="@drawable/baseline_task_24"
        android:title="@string/todo" />
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/baseline_add_circle_24"
        android:title="@string/add" />
    <item
        android:id="@+id/menu_calendar"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/calendar" />
    <item
        android:id="@+id/menu_reminder"
        android:icon="@drawable/_11694_bell_icon"
        android:title="@string/reminder" />
</menu>